tests/Examples/buildsystem-capi.llbuild
# Check that the BuildSystem C API example builds and runs correctly.
#
# RUN: cc -o %t.exe %{srcroot}/examples/c-api/buildsystem/main.c -I %{srcroot}/products/libllbuild/public-api -lllbuild -L %{llbuild-lib-dir} -Werror
# RUN: env LD_LIBRARY_PATH=%{llbuild-lib-dir} %t.exe %s > %t.out
# RUN: %{FileCheck} %s --input-file %t.out
#
# CHECK: command_started: <hello> -- HELLO
# CHECK: command_finished: <hello>
# CHECK: command_started: <error> -- FAILING-COMMAND
# CHECK: <unknown>:0: error: build had 1 command failure

client:
  name: basic
  version: 0

targets:
  "": ["<all>"]

commands:
  "<all>":
    tool: phony
    inputs: ["<error>"]
    outputs: ["<all>"]

  "<hello>":
    tool: shell
    args: ["echo", "Hello, world!"]
    outputs: ["<hello>"]
    description: HELLO

  "<error>":
    tool: shell
    args: ["false"]
    inputs: ["<hello>"]
    outputs: ["<error>"]
    description: FAILING-COMMAND
